objects/AFSC__FS_Exclusion__c.object
<CustomObject>
    <description>F-Secure Cloud Protection: Scan exclusions</description>
    <fields>
        <fullName>AFSC__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AFSC__Checksum__c</fullName>
        <label>Checksum</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFSC__Domains__c</fullName>
        <label>Domains</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AFSC__Exclusion__c</fullName>
        <label>Exclusion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AFSC__File_Extensions__c</fullName>
        <label>File Extensions</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AFSC__File_Types__c</fullName>
        <label>File Types</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AFSC__Hosts__c</fullName>
        <label>Hosts</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AFSC__Type__c</fullName>
        <label>Exclusion Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>File Protection Settings</fullName>
                </value>
                <value>
                    <fullName>URL Protection Settings</fullName>
                </value>
                <value>
                    <fullName>Extension</fullName>
                </value>
                <value>
                    <fullName>Filetype</fullName>
                </value>
                <value>
                    <fullName>Host</fullName>
                </value>
                <value>
                    <fullName>Domain</fullName>
                </value>
                <value>
                    <fullName>URL</fullName>
                </value>
                <value>
                    <fullName>Rich Preview</fullName>
                </value>
                <value>
                    <fullName>Blocked Extension or Filetype</fullName>
                </value>
                <value>
                    <fullName>Blocked Extension or Filetype Manual Scan</fullName>
                </value>
                <value>
                    <fullName>Allowed Extension or Filetype</fullName>
                </value>
                <value>
                    <fullName>Excluded Extension or Filetype</fullName>
                </value>
                <value>
                    <fullName>Extension or Filetype To Scan</fullName>
                </value>
                <value>
                    <fullName>Extension or Filetype to Scan Manual Scan</fullName>
                </value>
                <value>
                    <fullName>Excluded Extension or Filetype Manual Scan</fullName>
                </value>
                <value>
                    <fullName>Allowed Extension or Filetype Manual Scan</fullName>
                </value>
                <value>
                    <fullName>Attachment Location To Scan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AFSC__Urls__c</fullName>
        <label>Urls</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Exclusion</label>
    <nameField>
        <displayFormat>Ecx-{0000}</displayFormat>
        <label>Exclusion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exclusions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>